--- a/src/components/book-list-item/book-list-item.css
+++ b/src/components/book-list-item/book-list-item.css
@@ -5,15 +5,21 @@
 }
 .book-title{
   font-size: 32px;
+  max-width: 750px;
 }
 .book-item-img{
   margin-right: 5%;
   height: 300px;
   width: 200px;
+  background-position: bottom;
+  background-size: 300px;
 }
 .book-item-price{
   font-size: 24px;
 }
 .book-title{
   color: #185244;
+}
+.btn-info{
+  margin-left: 5%;
 }
