--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body::-webkit-scrollbar {
-  width: 1em;
+  width: 8px;
 }
  
 body::-webkit-scrollbar-track {
@@ -10,4 +10,5 @@ body::-webkit-scrollbar-thumb {
   background-color: #56CC9D; 
   outline: 1px solid #185244;
   box-shadow: inset 0 0 6px #185244;
+  border-radius: 4px;
 }
