--- a/src/components/book-list-item/book-list-item.css
+++ b/src/components/book-list-item/book-list-item.css
@@ -14,6 +14,9 @@
   background-position: bottom;
   background-size: 300px;
 }
+.book-item-info-wrapper{
+  width: calc(80% - 200px);
+}
 .book-item-price{
   font-size: 24px;
 }
